ligolang/src/test/contracts/negative/vars_consts/multiple_vars_2.jsligo
let bar = (_ : unit) : int =>
  {
    let [x,y] = [4,5];
    let add = (_ : unit) : int => { return (x + y); };
    return add();
  };
